[package]
name = "mahiwa_frontend_rust"
license = "MIT"
version = "0.1.1"
authors = ["usuyuki"]
description = "Library for using Mahiwa from Rust"
edition = "2021"
exclude = [".github", ".gitignore", "_examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
